--- a/src/settings/wearer-settings/header/header.scss
+++ b/src/settings/wearer-settings/header/header.scss
@@ -180,7 +180,7 @@ html, body{
     }
 }
 @media screen and (max-width: 735px) {
-    .settings_header__logo {
+    #backgroundRedirect {
     display: none;
     }
     .settings_header label{
